--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Small HTML & CSS Projects</h1>
         <div class="projects">
-            <a href="#" class="project-link">Project One - Responsive Profile Card UI 🔥</a>
+            <a href="./1_Responsive Profile Card UI/index.html" class="project-link">Project 1 - Responsive Profile Card UI 🔥</a>
         </div>
     </main>
 </body>
