--- a/1_Responsive Profile Card UI/index.html
+++ b/1_Responsive Profile Card UI/index.html
@@ -13,6 +13,61 @@
     rel="stylesheet" />
 </head>
 <body>
+    <div class="profile-card">
+        <!--Image-->
+        <div class="image">
+            <img src="profile.jpeg" alt="Profile picture" class="profile-img" />
+        </div>
+
+        <!-- Hero Section -->
+        <div class="text-data">
+            <span class="name">Bhabani Shankar Barik</span>
+            <span class="job">Web Engineer & Freelancer</span>
+        </div>
+
+        <!-- Media Buttons -->
+        <div class="media-buttons">
+            <a href="#"style="background: #4267b2" class="link">
+                <i class="bx bxl-linkedin-square"></i>
+            </a>
+            <a href="#"style="background: #1da1f2" class="link">
+                <i class="bx bxl-twitter"></i>
+            </a>
+            <a href="#"style="background: #e1306c" class="link">
+                <i class="bx bxl-instagram"></i>
+            </a>
+            <a href="#"style="background: #4267b2" class="link">
+                <i class="bx bxl-facebook"></i>
+            </a>
+            <a href="#"style="background: #ff0000" class="link">
+                <i class="bx bx-envelope"></i>
+            </a>
+        </div>
+
+        <!-- Buttons -->
+        <div class="buttons">
+            <button class="button">Follow Me</button>
+            <button class="button">Message</button>
+        </div>
+
+        <!-- Analytics -->
+        <div class="analytics">
+            <div class="data">
+                <i class="bx bx-heart"></i>
+                <span class="number">90.3k</span>
+            </div>
+
+            <div class="data">
+                <i class="bx bx-message-rounded"></i>
+                <span class="number">35.6k</span>
+            </div>
+
+            <div class="data">
+                <i class="bx bx-share"></i>
+                <span class="number">25.9k</span>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
