--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>Small HTML & CSS Projects</h1>
         <div class="projects">
             <a href="./1_Responsive Profile Card UI/index.html" class="project-link">Project 1 - Responsive Profile Card UI 🔥</a>
+            <a href="./2_Flipping_Card_UI_Design/index.html" class="project-link">Project 2 - Flipping Card UI 😀</a>
         </div>
     </main>
 </body>
