--- a/2_Flipping_Card_UI_Design/index.html
+++ b/2_Flipping_Card_UI_Design/index.html
@@ -30,8 +30,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Back side -->
+            <div class="card back-face">
+                <h6>
+                    For customer service call +91 000 111 7890 or email at
+                    mastercard@gmail.com
+                </h6>
+                <span class="magnetic-strip"></span>
+                <div class="signature"><i>005</i></div>
+                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis deserunt distinctio natus, voluptate eaque laborum atque laboriosam veniam non facere quod vel inventore vitae quasi et. Totam nostrum aspernatur facilis!</h5>
+            </div>
         </div>
     </section>
-    
 </body>
 </html>
