--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="projects">
             <a href="./1_Responsive Profile Card UI/index.html" class="project-link">Project 1 - Responsive Profile Card UI 🔥</a>
             <a href="./2_Flipping_Card_UI_Design/index.html" class="project-link">Project 2 - Flipping Card UI 😀</a>
+            <a href="./3_creditCardUIDesign/index.html" class="project-link">Project 3 - Credit Card UI </a>
         </div>
     </main>
 </body>
