--- a/3_creditCardUIDesign/index.html
+++ b/3_creditCardUIDesign/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <span class="logo">
-            <img src="./images/logo.png" alt="logo-img">
-            <h5>Master Card</h5>
-        </span>
+        <header>
+            <span class="logo">
+                <img src="./images/logo.png" alt="logo-img">
+                <h5>Master Card</h5>
+            </span>
+            <img src="./images/chip.png" alt="chip-img" class="chip">
+        </header>
+
     </div>
 </body>
 </html>
