Update Card Details

--- a/3_creditCardUIDesign/index.html
+++ b/3_creditCardUIDesign/index.html
@@ -16,6 +16,17 @@
             <img src="./images/chip.png" alt="chip-img" class="chip">
         </header>
 
+        <div class="card-details">
+          <div class="name-number">
+                <h6>Card Number</h6>
+                <h5 class="number">8050 4050 30 50 1234 0980</h5>
+                <h5 class="name">Dayal Shankar Banerjee</h5>
+          </div>  
+          <div class="valid-date">
+            <h6>Valid Thruh6>
+            <h5>09/30</h5>
+          </div>
+        </div>
     </div>
 </body>
 </html>
