--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="./1_Responsive Profile Card UI/index.html" class="project-link">Project 1 - Responsive Profile Card UI 🔥</a>
             <a href="./2_Flipping_Card_UI_Design/index.html" class="project-link">Project 2 - Flipping Card UI 😀</a>
             <a href="./3_creditCardUIDesign/index.html" class="project-link">Project 3 - Credit Card UI </a>
-            <a href="" class="project-link">Project 4 -</a>
+            <a href="./4_sideBarMenu/index.html" class="project-link">Project 4 - Side-Bar Menu </a>
         </div>
     </main>
 </body>
