--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="./2_Flipping_Card_UI_Design/index.html" class="project-link">Project 2 - Flipping Card UI 😀</a>
             <a href="./3_creditCardUIDesign/index.html" class="project-link">Project 3 - Credit Card UI </a>
             <a href="./4_sideBarMenu/index.html" class="project-link">Project 4 - Side-Bar Menu </a>
+            <a href="./5_loginForm/index.html" class="project-link">Project 5 - Login Form</a>
         </div>
     </main>
 </body>
