--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="./3_creditCardUIDesign/index.html" class="project-link">Project 3 - Credit Card UI </a>
             <a href="./4_sideBarMenu/index.html" class="project-link">Project 4 - Side-Bar Menu </a>
             <a href="./5_loginForm/index.html" class="project-link">Project 5 - Login Form</a>
+            <a href="./6_EcommerceApp/index.html" class="project-link">Project 6 - E-Commerce APP</a>
         </div>
     </main>
 </body>
