--- a/6_EcommerceApp/index.html
+++ b/6_EcommerceApp/index.html
@@ -6,6 +6,18 @@
     <title>Plant Shop</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">LOGO</div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Offers</a></li>
+                <li><a href="#">Buy Now</a></li>
+                <li><a href="#">Sell Now</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#" class="signup">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
